[package]
name = "esparse"
version = "0.0.1" # should match html_root_url
authors = ["Nathan"]

description = "A fast JavaScript parser. Currently only a lexical analyzer."
documentation = "https://docs.rs/esparse"
repository = "https://github.com/nathan/parcel-redux"
license = "MIT"

exclude = [
  "private/*",
]

[dependencies]
memchr = "1.0.1"
