[package]
name = "esparse"
version = "0.0.4" # should match html_root_url
authors = ["Nathan"]

description = "A fast JavaScript parser. Currently only a lexical analyzer."
documentation = "https://docs.rs/esparse"
repository = "https://github.com/nathan/pax"
license = "MIT"

keywords = ["js", "javascript", "es", "ecmascript", "parser"]
categories = ["parser-implementations"]

exclude = [
  "private/*",
  "data/*",
]

[dependencies]
memchr = "1.0.1"
matches = "0.1"
