[package]
name = "esparse"
version = "0.1.0" # should match html_root_url
authors = ["Nathan"]

description = "A fast JavaScript parser. Currently only a lexical analyzer."
documentation = "https://docs.rs/esparse"
repository = "https://github.com/nathan/pax"
license = "MIT"

keywords = ["js", "javascript", "es", "ecmascript", "parser"]
categories = ["parser-implementations"]

exclude = [
  "private/*",
  "data/*",
]

[features]
default = []
bench = []

[dependencies]
memchr = "2.3.4"
matches = "0.1"
cfg-if = "1.0.0"
unicode-xid = "0.2.1"
