[package]
name = "pax"
version = "0.4.1"
authors = ["Nathan"]
edition = "2018"

description = "The fastest JavaScript bundler in the galaxy."
repository = "https://github.com/nathan/pax"
license = "MIT"
readme = "../README.md"

keywords = ["js", "javascript", "es", "ecmascript", "bundler"]
categories = ["development-tools", "command-line-utilities", "web-programming"]

autobins = true
exclude = [
  "examples/*",
  "private/*",
  "src/test/*",
]

[[bin]]
name = "px"
path = "src/main.rs"

[features]
default = []
bench = []

[dependencies]
esparse = { version = "0.1.0", path = "../esparse" }
regex = "1"
fnv = "1.0.3"
lazy_static = "1.4.0"
cfg-if = "1.0.0"
crossbeam = "0.8.0"
num_cpus = "1.13.0"
matches = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
notify = "4.0"
memchr = "2.3.4"
base64 = "0.13.0"
